correction entite freqAtk appel tableau